Add basic client protocol for blue tx

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,8 @@
 %% -*- mode: erlang; -*-
 {deps, [
   {riak_core, {git, "https://github.com/riak-core-lite/riak_core_lite", {tag, "v0.10.0"}}},
-  {riak_core_lite_util, {git, "https://github.com/riak-core-lite/riak_core_lite_util.git"}, {branch, "master"}},
+  {riak_core_lite_util, {git, "https://github.com/riak-core-lite/riak_core_lite_util.git", {branch, "master"}}},
+  {pvc_proto, {git, "https://github.com/ergl/pvc_proto.git", {tag, "v0.12.2"}}},
   {ranch, "1.7.1"}
 ]}.
 
