Simplify local cluster

--- a/rebar.config
+++ b/rebar.config
@@ -7,19 +7,21 @@
 ]}.
 
 {relx,
-    [{release, {grb , "0.1.0"}, [grb, sasl]},
+    [
+      {release, {grb_local1, "0.1.0"}, [grb, sasl]},
+      {release, {grb_local2, "0.1.0"}, [grb, sasl]},
+      {release, {grb_local3, "0.1.0"}, [grb, sasl]},
+      {release, {grb , "0.1.0"}, [grb, sasl]},
         {dev_mode, false},
         {include_erts, true},
         {extended_start_script, true},
 
-        {sys_config, "config/sys.config"},
+        {sys_config_src, "config/sys.config.src"},
         {vm_args_src, "config/vm.args.src"},
 
         {overlay, [
-            {mkdir, "etc"},
             {mkdir, "bin"},
             {copy, "bin/env", "bin/env"},
-            {mkdir, "data/ring"},
             {mkdir, "log/sasl"}
         ]}
 ]}.
@@ -30,18 +32,4 @@
     {i,"include"}
 ]}.
 
-{profiles, [
-    {prod, [{relx, [{dev_mode, false}, {include_erts, true}]}]},
-    {dev1, [{relx, [
-                {sys_config, "config/sys_dev1.config"},
-                {vm_args, "config/vm_dev1.args"}
-    ]}]},
-    {dev2, [{relx, [
-                {sys_config, "config/sys_dev2.config"},
-                {vm_args, "config/vm_dev2.args"}
-    ]}]},
-    {dev3, [{relx, [
-                {sys_config, "config/sys_dev3.config"},
-                {vm_args, "config/vm_dev3.args"}
-    ]}]}
-]}.
+{profiles, []}.
