--- a/rebar.config
+++ b/rebar.config
@@ -35,5 +35,8 @@
 {profiles, [
   {debug_log, [
     {erl_opts, [{d, debug_log}]}
+  ]},
+  {debug_bin, [
+    {erl_opts, [bin_opt_info]}
   ]}
 ]}.
