--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,8 @@
   {riak_core, {git, "https://github.com/riak-core-lite/riak_core_lite", {tag, "v0.10.0"}}},
   {riak_core_lite_util, {git, "https://github.com/riak-core-lite/riak_core_lite_util.git", {branch, "master"}}},
   {pvc_proto, {git, "https://github.com/ergl/pvc_proto.git", {tag, "v0.13.0"}}},
-  {ranch, "1.7.1"}
+  {ranch, "1.7.1"},
+  {recon, "2.5.1"}
 ]}.
 
 {relx,
