--- a/rebar.config
+++ b/rebar.config
@@ -12,6 +12,7 @@
       {release, {grb_local1, "0.1.0"}, [grb, sasl]},
       {release, {grb_local2, "0.1.0"}, [grb, sasl]},
       {release, {grb_local3, "0.1.0"}, [grb, sasl]},
+      {release, {grb_local4, "0.1.0"}, [grb, sasl]},
       {release, {grb , "0.1.0"}, [grb, sasl]},
         {dev_mode, false},
         {include_erts, true},
