Allow compile-time flag for basic replication (single-dc setting)

--- a/rebar.config
+++ b/rebar.config
@@ -35,6 +35,9 @@
 ]}.
 
 {profiles, [
+  {basic_replication, [
+    {erl_opts, [{d, 'BASIC_REPLICATION'}]}
+  ]},
   {debug_log, [
     {erl_opts, [{d, debug_log}]}
   ]},
