Update devrel profile

--- a/rebar.config
+++ b/rebar.config
@@ -41,6 +41,9 @@
   {debug_log, [
     {erl_opts, [{d, debug_log}]}
   ]},
+  {debug_basic_replication, [
+    {erl_opts, [{d, 'BASIC_REPLICATION'}, {d, debug_log}]}
+  ]},
   {debug_bin, [
     {erl_opts, [bin_opt_info]}
   ]}
