Add profile delaying the sending of clocks

--- a/rebar.config
+++ b/rebar.config
@@ -39,6 +39,9 @@
   {basic_replication, [
     {erl_opts, [{d, 'BASIC_REPLICATION'}]}
   ]},
+  {delay_clocks, [
+    {erl_opts, [{d, 'DELAY_UNIFORM_CLOCKS'}]}
+  ]},
   {debug_log, [
     {erl_opts, [{d, debug_log}]}
   ]},
