Option to recompute uniformVC on remote update only

--- a/rebar.config
+++ b/rebar.config
@@ -42,6 +42,9 @@
   {delay_clocks, [
     {erl_opts, [{d, 'DELAY_UNIFORM_CLOCKS'}]}
   ]},
+  {remote_uvc, [
+    {erl_opts, [{d, 'REMOTE_UVC'}]}
+  ]},
   {debug_log, [
     {erl_opts, [{d, debug_log}]}
   ]},
