Consolidate improvements in a single profile

--- a/rebar.config
+++ b/rebar.config
@@ -39,11 +39,8 @@
   {basic_replication, [
     {erl_opts, [{d, 'BASIC_REPLICATION'}]}
   ]},
-  {delay_clocks, [
-    {erl_opts, [{d, 'DELAY_UNIFORM_CLOCKS'}]}
-  ]},
-  {remote_uvc, [
-    {erl_opts, [{d, 'REMOTE_UVC'}]}
+  {uniform_improved, [
+    {erl_opts, [{d, 'UNIFORM_IMPROVED'}]}
   ]},
   {debug_log, [
     {erl_opts, [{d, debug_log}]}
