Add flag to disable uvc computation

--- a/rebar.config
+++ b/rebar.config
@@ -42,6 +42,9 @@
   {uniform_improved, [
     {erl_opts, [{d, 'UNIFORM_IMPROVED'}]}
   ]},
+  {remove_uvc, [
+    {erl_opts, [{d, 'REMOVE_UVC'}]}
+  ]},
   {debug_log, [
     {erl_opts, [{d, debug_log}]}
   ]},
