Add (hopefully) improved version of uniformVC computation

--- a/rebar.config
+++ b/rebar.config
@@ -45,6 +45,9 @@
   {remove_uvc, [
     {erl_opts, [{d, 'REMOVE_UVC'}]}
   ]},
+  {better_uvc, [
+    {erl_opts, [{d, 'UVC_IMPROVED'}]}
+  ]},
   {debug_log, [
     {erl_opts, [{d, debug_log}]}
   ]},
