Add profile for zeroed uniformVC

--- a/rebar.config
+++ b/rebar.config
@@ -45,6 +45,9 @@
   {remove_uvc, [
     {erl_opts, [{d, 'REMOVE_UVC'}]}
   ]},
+  {remove_uvc_fill_zeros, [
+    {erl_opts, [{d, 'REMOVE_UVC_WITH_ZEROS'}]}
+  ]},
   {better_uvc, [
     {erl_opts, [{d, 'UVC_IMPROVED'}]}
   ]},
