Add profile for delay clocks

--- a/rebar.config
+++ b/rebar.config
@@ -51,6 +51,9 @@
   {better_uvc, [
     {erl_opts, [{d, 'UVC_IMPROVED'}]}
   ]},
+  {delay_clocks, [
+    {erl_opts, [{d, 'DELAY_CLOCKS'}]}
+  ]},
   {debug_log, [
     {erl_opts, [{d, debug_log}]}
   ]},
