Gate no append behind a profile

--- a/rebar.config
+++ b/rebar.config
@@ -45,6 +45,9 @@
   {delay_clocks, [
     {erl_opts, [{d, 'DELAY_CLOCKS'}]}
   ]},
+  {no_remote_append, [
+    {erl_opts, [{d, 'NO_REMOTE_APPEND'}]}
+  ]},
   {debug_log, [
     {erl_opts, [{d, debug_log}]}
   ]},
