--- a/rebar.config
+++ b/rebar.config
@@ -37,7 +37,7 @@
 
 {profiles, [
   {basic_replication, [
-    {erl_opts, [{d, 'BASIC_REPLICATION'}]}
+    {erl_opts, [{d, 'BASIC_REPLICATION'}, {d, 'NO_REMOTE_APPEND'}]}
   ]},
   {better_uvc, [
     {erl_opts, [{d, 'UVC_IMPROVED'}]}
