Re-add red transactions, gate old implementation behind profile
This (partially) reverts commit 2b273b5cd89d5e685588c8793080dea164e02b24,
and adds the new implementation of start_transaction/2

--- a/rebar.config
+++ b/rebar.config
@@ -37,7 +37,13 @@
 
 {profiles, [
   {basic_replication, [
-    {erl_opts, [{d, 'BASIC_REPLICATION'}, {d, 'NO_REMOTE_APPEND'}]}
+    {erl_opts, [{d, 'BASIC_REPLICATION'},
+                {d, 'NO_REMOTE_APPEND'},
+                {d, 'READ_BLUE_CHECK'}]}
+  ]},
+  {uniform_blue, [
+    {erl_opts, [{d, 'UNIFORM_BLUE'},
+                {d, 'READ_BLUE_CHECK'}]}
   ]},
   {debug_log, [
     {erl_opts, [{d, debug_log}]}
