Split stableVC[red] into its own key and recompute stableVC[red] on local broadcast
This commit also implements red_heartbeat/1

--- a/rebar.config
+++ b/rebar.config
@@ -39,11 +39,11 @@
   {basic_replication, [
     {erl_opts, [{d, 'BASIC_REPLICATION'},
                 {d, 'NO_REMOTE_APPEND'},
-                {d, 'READ_BLUE_CHECK'}]}
+                {d, 'BLUE_KNOWN_VC'}]}
   ]},
   {uniform_blue, [
     {erl_opts, [{d, 'UNIFORM_BLUE'},
-                {d, 'READ_BLUE_CHECK'}]}
+                {d, 'BLUE_KNOWN_VC'}]}
   ]},
   {debug_log, [
     {erl_opts, [{d, debug_log}]}
