--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,7 @@
   {pvc_proto, {git, "https://github.com/ergl/pvc_proto.git", {tag, "v0.14.0"}}},
   {shackle, {git, "https://github.com/ergl/shackle.git", {branch, "send-forget"}}},
   {ranch, "1.7.1"},
+  {poolboy, "1.5.2"},
   {recon, "2.5.1"}
 ]}.
 
