Disable red<->blue conflict, add feature toggle
Red operations never conflict with blue, so there's no need to aggregate
commit vectors for blue operations. The aggregated commit vector is only
used during red commit to check for stale versions. If we only conflict
with red operations, we should only check against red operations.

--- a/rebar.config
+++ b/rebar.config
@@ -45,6 +45,9 @@
     {erl_opts, [{d, 'UNIFORM_BLUE'},
                 {d, 'BLUE_KNOWN_VC'}]}
   ]},
+  {enable_blue_conflict, [
+    {erl_opts, [{d, 'RED_BLUE_CONFLICT'}]}
+  ]},
   {debug_log, [
     {erl_opts, [{d, debug_log}]}
   ]},
