--- a/rebar.config
+++ b/rebar.config
@@ -47,6 +47,9 @@
   {enable_blue_conflict, [
     {erl_opts, [{d, 'RED_BLUE_CONFLICT'}]}
   ]},
+  {metrics, [
+    {erl_opts, [{d, 'ENABLE_METRICS'}]}
+  ]},
   {debug_log, [
     {erl_opts, [{d, debug_log}]}
   ]},
