--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,8 @@
 {deps, [
   {riak_core, {git, "https://github.com/riak-core-lite/riak_core_lite", {tag, "v0.10.0"}}},
   {riak_core_lite_util, {git, "https://github.com/riak-core-lite/riak_core_lite_util.git", {branch, "master"}}},
-  {pvc_proto, {git, "https://github.com/ergl/pvc_proto.git", {tag, "v0.20.1"}}},
+  {pvc_proto, {git, "https://github.com/ergl/pvc_proto.git", {tag, "v0.21.2"}}},
+  {pvc_types, {git, "https://github.com/ergl/pvc_types.git", {tag, "v0.6.1"}}},
   {ranch, "1.7.1"},
   {recon, "2.5.1"}
 ]}.
