Split basic_replication profile into cure / ft_cure
The flags we had before were too coarse, we need a new profile that
works like Cure, but that has forwarding of transactions for fault
tolerance.

--- a/rebar.config
+++ b/rebar.config
@@ -36,22 +36,30 @@
 ]}.
 
 {profiles, [
-  {basic_replication, [
-    {erl_opts, [{d, 'BASIC_REPLICATION'},
-                {d, 'NO_REMOTE_APPEND'},
-                {d, 'BLUE_KNOWN_VC'}]}
-  ]},
+  {cure, [{d, 'BLUE_KNOWN_VC'},
+          {d, 'UBARRIER_NOOP'},
+          {d, 'STABLE_SNAPSHOT'},
+          {d, 'NO_FWD_REPLICATION'}]},
+
+  {ft_cure, [{d, 'BLUE_KNOWN_VC'},
+             {d, 'UBARRIER_NOOP'},
+             {d, 'STABLE_SNAPSHOT'}]},
+
   {uniform_blue, [
-    {erl_opts, [{d, 'UNIFORM_BLUE'},
-                {d, 'BLUE_KNOWN_VC'}]}
+    {erl_opts, [{d, 'BLUE_KNOWN_VC'},
+                {d, 'UNIFORM_SNAPSHOT'}]}
   ]},
+
   {metrics, [
     {erl_opts, [{d, 'ENABLE_METRICS'}]}
   ]},
+
   {debug_log, [
     {erl_opts, [{d, debug_log}]}
   ]},
+
   {debug_bin, [
     {erl_opts, [bin_opt_info]}
   ]}
+
 ]}.
