Fix bad profiles

--- a/rebar.config
+++ b/rebar.config
@@ -36,14 +36,18 @@
 ]}.
 
 {profiles, [
-  {cure, [{d, 'BLUE_KNOWN_VC'},
-          {d, 'UBARRIER_NOOP'},
-          {d, 'STABLE_SNAPSHOT'},
-          {d, 'NO_FWD_REPLICATION'}]},
+  {cure, [
+    {erl_opts, [{d, 'BLUE_KNOWN_VC'},
+                {d, 'UBARRIER_NOOP'},
+                {d, 'STABLE_SNAPSHOT'},
+                {d, 'NO_FWD_REPLICATION'}]}
+  ]},
 
-  {ft_cure, [{d, 'BLUE_KNOWN_VC'},
-             {d, 'UBARRIER_NOOP'},
-             {d, 'STABLE_SNAPSHOT'}]},
+  {ft_cure, [
+    {erl_opts, [{d, 'BLUE_KNOWN_VC'},
+                {d, 'UBARRIER_NOOP'},
+                {d, 'STABLE_SNAPSHOT'}]}
+  ]},
 
   {uniform_blue, [
     {erl_opts, [{d, 'BLUE_KNOWN_VC'},
