--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,8 @@
   {pvc_proto, {git, "https://github.com/ergl/pvc_proto.git", {tag, "v0.25.0"}}},
   {pvc_types, {git, "https://github.com/ergl/pvc_types.git", {tag, "v0.7.1"}}},
   {ranch, "1.7.1"},
-  {recon, "2.5.1"}
+  {recon, "2.5.1"},
+  {observer_cli, "1.6.0"}
 ]}.
 
 {relx,
