Add redblue naive profile

--- a/rebar.config
+++ b/rebar.config
@@ -55,6 +55,10 @@
                 {d, 'UNIFORM_SNAPSHOT'}]}
   ]},
 
+  {redblue_naive, [
+    {erl_opts, [{d, 'REDBLUE_CERTIFICATION_NAIVE'}]}
+  ]},
+
   {metrics, [
     {erl_opts, [{d, 'ENABLE_METRICS'}]}
   ]},
