Move strong heartbeat rescheduling to prepare time

--- a/rebar.config
+++ b/rebar.config
@@ -55,6 +55,10 @@
                 {d, 'UNIFORM_SNAPSHOT'}]}
   ]},
 
+  {disable_strong_heartbeat, [
+    {erl_opts, [{d, 'DISABLE_STRONG_HEARTBEAT'}]}
+  ]},
+
   {metrics, [
     {erl_opts, [{d, 'ENABLE_METRICS'}]}
   ]},
