--- a/rebar.config
+++ b/rebar.config
@@ -60,7 +60,8 @@
   ]},
 
   {metrics, [
-    {erl_opts, [{d, 'ENABLE_METRICS'}]}
+    {erl_opts, [{d, 'ENABLE_METRICS'},
+                {d, 'SENDER_SOCKET_BACKEND'}]}
   ]},
 
   {debug_log, [
