Add profile explanation

--- a/rebar.config
+++ b/rebar.config
@@ -44,12 +44,14 @@
                 {d, 'NO_FWD_REPLICATION'}]}
   ]},
 
+  %% Same as system, but without strong transactions, and clients read from stableVC
   {ft_cure, [
     {erl_opts, [{d, 'BLUE_KNOWN_VC'},
                 {d, 'UBARRIER_NOOP'},
                 {d, 'STABLE_SNAPSHOT'}]}
   ]},
 
+  %% Regular system, but without strong transactions
   {uniform_blue, [
     {erl_opts, [{d, 'BLUE_KNOWN_VC'},
                 {d, 'UNIFORM_SNAPSHOT'}]}
