--- a/rebar.config
+++ b/rebar.config
@@ -38,7 +38,8 @@
 
 {profiles, [
   {cure, [
-    {erl_opts, [{d, 'BLUE_KNOWN_VC'},
+    {erl_opts, [{d, 'NO_STRONG_ENTRY_VC'},
+                {d, 'DISABLE_STRONG_SERVICE'},
                 {d, 'UBARRIER_NOOP'},
                 {d, 'STABLE_SNAPSHOT'},
                 {d, 'NO_FWD_REPLICATION'}]}
@@ -46,14 +47,16 @@
 
   %% Same as system, but without strong transactions, and clients read from stableVC
   {ft_cure, [
-    {erl_opts, [{d, 'BLUE_KNOWN_VC'},
+    {erl_opts, [{d, 'NO_STRONG_ENTRY_VC'},
+                {d, 'DISABLE_STRONG_SERVICE'},
                 {d, 'UBARRIER_NOOP'},
                 {d, 'STABLE_SNAPSHOT'}]}
   ]},
 
   %% Regular system, but without strong transactions
   {uniform_blue, [
-    {erl_opts, [{d, 'BLUE_KNOWN_VC'},
+    {erl_opts, [{d, 'NO_STRONG_ENTRY_VC'},
+                {d, 'DISABLE_STRONG_SERVICE'},
                 {d, 'UNIFORM_SNAPSHOT'}]}
   ]},
 
