Clean up releases

--- a/rebar.config
+++ b/rebar.config
@@ -11,11 +11,11 @@
 
 {relx,
     [
-      {release, {grb_local1, "0.1.0"}, [grb, sasl]},
-      {release, {grb_local2, "0.1.0"}, [grb, sasl]},
-      {release, {grb_local3, "0.1.0"}, [grb, sasl]},
-      {release, {grb_local4, "0.1.0"}, [grb, sasl]},
-      {release, {grb , "0.1.0"}, [grb, sasl]},
+      {release, {grb_local1, "0.1.0"}, [grb]},
+      {release, {grb_local2, "0.1.0"}, [grb]},
+      {release, {grb_local3, "0.1.0"}, [grb]},
+      {release, {grb_local4, "0.1.0"}, [grb]},
+      {release, {grb , "0.1.0"}, [grb]},
         {dev_mode, false},
         {include_erts, true},
         {extended_start_script, true},
