Implement redblue profile

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
   {riak_core, {git, "https://github.com/riak-core-lite/riak_core_lite", {tag, "v0.10.0"}}},
   {riak_core_lite_util, {git, "https://github.com/riak-core-lite/riak_core_lite_util.git", {branch, "master"}}},
   {pvc_proto, {git, "https://github.com/ergl/pvc_proto.git", {tag, "v0.25.0"}}},
-  {pvc_types, {git, "https://github.com/ergl/pvc_types.git", {tag, "v0.7.1"}}},
+  {pvc_types, {git, "https://github.com/ergl/pvc_types.git", {tag, "v0.8.3"}}},
   {ranch, "1.7.1"},
   {recon, "2.5.1"},
   {observer_cli, "1.6.0"}
@@ -58,6 +58,13 @@
     {erl_opts, [{d, 'NO_STRONG_ENTRY_VC'},
                 {d, 'DISABLE_STRONG_SERVICE'},
                 {d, 'UNIFORM_SNAPSHOT'}]}
+  ]},
+
+  %% Regular system, but all strong transactions go through an
+  %% external sequencer service.
+  {redblue, [
+    {erl_opts, [{d, 'USE_REDBLUE_SEQUENCER'},
+                {d, 'DISABLE_STRONG_SERVICE'}]}
   ]},
 
   {disable_strong_heartbeat, [
